testsuite/tests/module/mod45.stderr

mod45.hs:6:11: error:
    • Illegal type signature in instance declaration:
        (==) :: T -> T -> Bool
      (Use InstanceSigs to allow this)
    • In the instance declaration for ‘Eq T’
